--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [
       {
-        "source": "/api/(.*)",
+        "source": "/(.*)", 
         "destination": "/"
       }
     ]
