change vercel.json for both

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,21 @@
+
+
+
 {
-   
-    "rewrites": [
-              {
-        "source": "/(.*)",
-        "destination": "/"
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
       }
-    ]
-  }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
