change FE vercel.json

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,21 +1,9 @@
-
-
-
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/**/*",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
+   
+    "rewrites": [
+              {
+        "source": "/(.*)",
+        "destination": "/"
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
-}
+    ]
+  }
