change BE vercel.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,8 +10,13 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/(.*)",
+      "dest": "/index.js"
+    },
+    {
       "src": "/(.*)", 
       "dest": "/index.js"
     }
   ]
 }
+
