--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,4 @@
 
-
 {
   "version": 2,
   "builds": [
@@ -11,12 +10,14 @@
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "/index.js"
-    },
-    {
-      "src": "/(.*)", 
-      "dest": "/index.js"
+      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+      }
     }
   ]
 }
+
 
