--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -16,10 +16,13 @@
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
       }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
     }
-  ]
-}
+  ],
+  "rewrites": [
+              {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
+  }
+
