--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,25 @@
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "next.config.js",
+      "use": "@vercel/static-build",
+      "config": {}
     }
- 
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/socket.io/(.*)",
+      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+      }
+    },
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
 }
-
