--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,4 @@
+
 {
   "version": 2,
   "builds": [
@@ -6,20 +7,13 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)", 
-      "dest": "/index.js"
-    },
-    {
-      "src": "/socket.io/(.*)",
-      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-      }
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
+
+
 
