--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,25 +1,10 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "next.config.js",
-      "use": "@vercel/static-build",
-      "config": {}
+      "source": "/(.*)",
+      "destination": "/"
     }
-  ],
-  "routes": [
-    {
-      "src": "/socket.io/(.*)",
-      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-      }
-    },
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
+ 
+  ]
 }
+
