--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,12 @@
     },
     {
       "src": "/socket.io/(.*)",
-      "dest": "/index.js"
+      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+      }
     }
   ]
 }
