--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -15,7 +15,7 @@
       "src": "/socket.io/(.*)",
       "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://secrets-chat.vercel.app",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
       }
