--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,19 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
-    },
-    {
-      "src": "/socket.io/(.*)",
-      "dest": "https://secretchat-backend.vercel.app/socket.io/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "https://secrets-chat.vercel.app",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-      }
+      "source": "/api/(.*)",
+      "destination": "/"
     }
   ]
 }
